--- a/懒加载.html
+++ b/懒加载.html
@@ -607,7 +607,7 @@
 
 
 
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="jQuery/jquery.js"></script>
     <script>
         check()
         $(window).on('scroll', check)
